--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
     <body>
 
         <!--========== HEADER ==========-->
-        <header class="header navbar-fixed-top">
+        <header class="header navbar-fixed-top" style="background-color: #00406e;">
             <!-- Navbar -->
-            <nav class="navbar" role="navigation">
+            <nav class="navbar" role="navigation" style="background-color: #00406e;">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="menu-container">
@@ -65,12 +65,12 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="navbar-nav navbar-nav-right">
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Pricing</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Products</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="contact.html">Contact</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="pricing.html">Pricing</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="about.html">About</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="products.html">Products</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="faq.html">FAQ</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" style="color:white" href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -166,63 +166,63 @@
 
         <!--========== FOOTER ==========-->
         <footer class="footer">
-            <!-- Links -->
-            <div class="footer-seperator">
-                <div class="content-lg container">
+                <br><br>
+                <!-- Links -->
+                <div class="footer-seperator">
+                    <div class="content-sm-4 container">
+                        <div class="row">
+                                <div class="col-sm-2 sm-margin-b-50">
+                                        <!-- List -->
+                                        <ul class="list-unstyled footer-list">
+                                            <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
+                                            <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
+                                            <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
+                                            <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
+                                                                                </ul>
+                                        <!-- End List -->
+                                    </div>
+                                    <div class="col-sm-2 sm-margin-b-50">
+                                            <!-- List -->
+                                            <ul class="list-unstyled footer-list">
+                                                <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
+                                                <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
+                                                <li class="footer-list-item"><a class="footer-list-link" href="#">Contact</a></li>
+                                                <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li>
+                                            </ul>
+                                            <!-- End List -->
+                                        </div>
+                            <div class="col-sm-4 sm-margin-b-90">
+                                <!-- List -->
+                                <ul class="list-unstyled footer-list">
+                                    <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li>
+                                    <li class="footer-list-item"><a class="footer-list-link" href="#">Facebook</a></li>
+                                    <li class="footer-list-item"><a class="footer-list-link" href="#">Instagram</a></li>
+                                    <li class="footer-list-item"><a class="footer-list-link" href="#">YouTube</a></li>
+                                </ul>
+                                <!-- End List -->
+                            </div>
+                            
+                        </div>
+                        <!--// end row -->
+                    </div>
+                </div>
+                <!-- End Links -->
+    
+                <!-- Copyright -->
+                <div class="content container">
                     <div class="row">
-                        <div class="col-sm-2 sm-margin-b-50">
-                            <!-- List -->
-                            <ul class="list-unstyled footer-list">
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Contact</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li>
-                            </ul>
-                            <!-- End List -->
+                        <div class="col-xs-6">
+                            <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                         </div>
-                        <div class="col-sm-4 sm-margin-b-30">
-                            <!-- List -->
-                            <ul class="list-unstyled footer-list">
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Facebook</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Instagram</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">YouTube</a></li>
-                            </ul>
-                            <!-- End List -->
-                        </div>
-                        <div class="col-sm-5 sm-margin-b-30">
-                            <h2 class="color-white">Send Us A Note</h2>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Name" required>
-                            <input type="email" class="form-control footer-input margin-b-20" placeholder="Email" required>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Phone" required>
-                            <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="Message" required></textarea>
-                            <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">Submit</button>
+                        <div class="col-xs-6 text-right">
+                            <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a> Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
                         </div>
                     </div>
                     <!--// end row -->
                 </div>
-            </div>
-            <!-- End Links -->
-
-            <!-- Copyright -->
-            <div class="content container">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
-                    </div>
-                    <div class="col-xs-6 text-right">
-                        <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a> Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
-                    </div>
-                </div>
-                <!--// end row -->
-            </div>
-            <!-- End Copyright -->
-        </footer>
-        <!--========== END FOOTER ==========-->
+                <!-- End Copyright -->
+            </footer>
+            <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
