--- a/pricing.html
+++ b/pricing.html
@@ -41,9 +41,9 @@
     <body>
 
         <!--========== HEADER ==========-->
-        <header class="header navbar-fixed-top" style="background-color: #00406e;">
+        <header class="header navbar-fixed-top" style="background-color: #2669c4;">
             <!-- Navbar -->
-            <nav class="navbar" role="navigation" style="background-color: #00406e;">
+            <nav class="navbar" role="navigation" style="background-color: #2669c4;">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="menu-container">
@@ -55,8 +55,8 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo">
-                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%">
+                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%">
                             </a>
                         </div>
                         <!-- End Logo -->
