--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <body>
 
         <!--========== HEADER ==========-->
-        <header class="header navbar-fixed-top" style="background-color: #2669c4;">
+        <header class="header navbar-fixed-top" >
             <!-- Navbar -->
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation" style="background-color: #2669c4;">
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation" >
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="menu-container" style="background-color: #2669c4;">
+                    <div class="menu-container">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="toggle-icon"></span>
@@ -58,7 +58,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%">
+                                <!--<img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%"> -->
                                 <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%">
                             </a>
                         </div>
@@ -70,10 +70,10 @@
                         <div class="menu-container">
                             <ul class="navbar-nav navbar-nav-right">
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html" style="color:white">Home</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html" style="color:white">Pricing</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html" style="color:white">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html" style="color:white">Products</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html" style="color:white">FAQ</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html" style="color:white">Tracks</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="oc.html" style="color:white">About</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html" style="color:white">Shedule</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html" style="color:white">Registration</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html" style="color:white">Contact</a></li>
                             </ul>
                         </div>
