--- a/products.html
+++ b/products.html
@@ -41,9 +41,9 @@
     <body>
 
         <!--========== HEADER ==========-->
-        <header class="header navbar-fixed-top" style="background-color: #2669c4;">
+        <header class="header navbar-fixed-top" >
             <!-- Navbar -->
-            <nav class="navbar" role="navigation" style="background-color: #2669c4;">
+            <nav class="navbar" role="navigation" >
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="menu-container">
@@ -55,7 +55,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%">
+                                <!--<img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%"> -->
                                 <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%">
                             </a>
                         </div>
@@ -66,13 +66,12 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="navbar-nav navbar-nav-right">
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="index.html" color="white">Home</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="pricing.html" color="white">Pricing</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="about.html" color="white">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" style="color:white" href="products.html" color="white">Products</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="faq.html" color="white">FAQ</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="contact.html" color="white">Contact</a></li>
-                            </ul>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover " href="index.html" style="color:white">Home</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html" style="color:white">Tracks</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover " href="oc.html" style="color:white">About</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="products.html" style="color:white">Shedule</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html" style="color:white">Registration</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html" style="color:white">Contact</a></li>                            </ul>
                         </div>
                     </div>
                     <!-- End Navbar Collapse -->
