--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
     <body>
 
         <!--========== HEADER ==========-->
-        <header class="header navbar-fixed-top" style="background-color: #2669c4;">
+        <header class="header navbar-fixed-top" >
             <!-- Navbar -->
-            <nav class="navbar" role="navigation" style="background-color: #2669c4;">
-                <div class="container">
+            <nav class="navbar" role="navigation" >
+                <div class="container" >
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="menu-container">
+                    <div class="menu-container" >
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="toggle-icon"></span>
@@ -44,24 +44,23 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%" >
-                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%">
+                                <!--<img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%"> -->                          <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%">
                             </a>
                         </div>
                         <!-- End Logo -->
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse nav-collapse">
-                        <div class="menu-container">
-                            <ul class="navbar-nav navbar-nav-right">
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="pricing.html">Pricing</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" style="color:white" href="about.html">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="products.html">Products</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="faq.html">FAQ</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" style="color:white" href="contact.html">Contact</a></li>
-                            </ul>
+                    <div class="collapse navbar-collapse nav-collapse" >
+                        <div class="menu-container" >
+                            <ul class="navbar-nav navbar-nav-right" >
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover " href="index.html" style="color:white">Home</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html" style="color:white">Tracks</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="about.html" style="color:white">About</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html" style="color:white">Shedule</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html" style="color:white">Registration</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html" style="color:white">Contact</a></li>
+      </ul>
                         </div>
                     </div>
                     <!-- End Navbar Collapse -->
