--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
-<!-- ==============================
-    Project:        Metronic "Asentus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-    Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
-    Follow:         http://www.twitter.com/keenthemes
-    Like:           http://www.facebook.com/keenthemes
-    Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-================================== -->
 <html lang="en" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Asentus" Frontend Freebie</title>
+        <title>BHTC-2022</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -54,7 +43,8 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <!--<img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%"> --><img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%">
+								<!--<img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%"> 
+								<img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%"> -->
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -67,7 +57,7 @@
 									<li class="nav-item"><a class="nav-item-child nav-item-hover " href="index.html" style="color:white">Home</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html" style="color:white">Tracks</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover " href="oc.html" style="color:white">About</a></li>
-                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html" style="color:white">Shedule</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html" style="color:white">SCHEDULE</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html" style="color:white">Registration</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="contact.html" style="color:white">Contact</a></li>                            </ul>
                         </div>
@@ -263,17 +253,18 @@
 		}
 
 		.bee-icon .bee-icon-image {
-			vertical-align: middle;
+           
 			margin-right: -4px
 		}
 
 		.bee-image img {
-			display: block;
+            display: block;
+            padding-top: 20%;
 			width: 100%
 		}
 
 		.bee-social .icon img {
-			max-height: 32px
+            max-height: 25px;
 		}
 
 		@media (max-width:768px) {
@@ -296,24 +287,21 @@
 		}
 
 		.bee-row-2 .bee-col-1 {
-			border-bottom: 20px solid transparent;
 			border-left: 20px solid transparent;
 			border-right: 20px solid transparent;
-			border-top: 20px solid transparent;
-			padding-bottom: 5px;
-			padding-top: 25px
+			
 		}
 
 		.bee-row-2 .bee-col-1 .bee-block-2 {
 			text-align: center;
-			padding: 10px
+			padding: 
 		}
 
 		.bee-row-2 .bee-col-2 .bee-block-1,
 		.bee-row-2 .bee-col-3 .bee-block-1 {
 			width: 100%;
 			text-align: center;
-			padding: 5px
+			
 		}
 
 		.bee-row-2 .bee-col-2 .bee-block-2,
@@ -333,14 +321,14 @@
 		}
 
 		.bee-row-2 .bee-col-5 .bee-block-1 {
-			width: 100%;
+			width: 80%;
 			text-align: center;
-			padding: 10px
+			
 		}
 
 		.bee-row-2 .bee-col-5 .bee-block-2 {
 			text-align: left;
-			padding: 10px
+			
 		}
 
 		.bee-row-3 .bee-col-1 .bee-block-1 {
@@ -449,12 +437,13 @@
     </div>
 <div class="bee-block bee-block-2 bee-list">
 <ul>
-<li><a href="https://ieeebangalore.org/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/" rel="noopener" target="_blank">Home</a></li>
-<li><a href="https://ieeebangalore.org/about/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/about/" rel="noopener" target="_blank">About</a></li>
-<li><a href="https://ieeebangalore.org/execom-2022/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/execom-2022/" rel="noopener" target="_blank">Execom 2022</a></li>
-<li><a href="https://ieeebangalore.org/newsletters/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/newsletters/" rel="noopener" target="_blank">Newsletters</a></li>
-<li><a href="https://ieeebangalore.org/by-laws/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/by-laws/" rel="noopener" target="_blank">By-Laws</a></li>
-<li><a href="https://ieeebangalore.org/guide-to-join-ieee/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/guide-to-join-ieee/" rel="noopener" target="_blank">Guide to Join IEEE</a></li>
+		<li><a href="index.html" rel="noopener" target="_blank"></a><a href="index.html" rel="noopener" target="_blank">Home</a></li>
+		<li><a href="pricing.html" rel="noopener" target="_blank"></a><a href="pricing.html" rel="noopener" target="_blank">Tracks</a></li>
+		<li><a href="oc.html" rel="noopener" target="_blank"></a><a href="oc.html" rel="noopener" target="_blank">About</a></li>
+		<li><a href="products.html" rel="noopener" target="_blank"></a><a href="products.html" rel="noopener" target="_blank">Schedule</a></li>
+		<li><a href="faq.html" rel="noopener" target="_blank"></a><a href="faq.html" rel="noopener" target="_blank">Registration</a></li>
+		<li><a href="contact.html" rel="noopener" target="_blank"></a><a href="contact.html" rel="noopener" target="_blank">contact-us</a></li>
+		
 </ul>
 </div>
 </div>
@@ -466,7 +455,8 @@
 </div>
 </div>
 </div>
-            <!--========== END FOOTER ==========-->
+        <!--========== END FOOTER ==========-->
+
 
         <!-- Back To Top -->
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
