--- a/oc.html
+++ b/oc.html
@@ -63,8 +63,8 @@ tr:nth-child(even) {
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <!--<img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%"> -->
-                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%">
+                                <!--<img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo" style="width: 100%">
+                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo" style="width: 100%"> -->
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -77,7 +77,7 @@ tr:nth-child(even) {
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover " href="index.html" style="color:white">Home</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html" style="color:white">Tracks</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="oc.html" style="color:white">About</a></li>
-                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html" style="color:white">Shedule</a></li>
+                                    <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html" style="color:white">SCHEDULE</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html" style="color:white">Registration</a></li>
                                     <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html" style="color:white">Contact</a></li>                            </ul>
                         </div>
@@ -715,17 +715,18 @@ tr:nth-child(even) {
 		}
 
 		.bee-icon .bee-icon-image {
-			vertical-align: middle;
+           
 			margin-right: -4px
 		}
 
 		.bee-image img {
-			display: block;
+            display: block;
+            padding-top: 20%;
 			width: 100%
 		}
 
 		.bee-social .icon img {
-			max-height: 32px
+            max-height: 25px;
 		}
 
 		@media (max-width:768px) {
@@ -748,24 +749,21 @@ tr:nth-child(even) {
 		}
 
 		.bee-row-2 .bee-col-1 {
-			border-bottom: 20px solid transparent;
 			border-left: 20px solid transparent;
 			border-right: 20px solid transparent;
-			border-top: 20px solid transparent;
-			padding-bottom: 5px;
-			padding-top: 25px
+			
 		}
 
 		.bee-row-2 .bee-col-1 .bee-block-2 {
 			text-align: center;
-			padding: 10px
+			padding: 
 		}
 
 		.bee-row-2 .bee-col-2 .bee-block-1,
 		.bee-row-2 .bee-col-3 .bee-block-1 {
 			width: 100%;
 			text-align: center;
-			padding: 5px
+			
 		}
 
 		.bee-row-2 .bee-col-2 .bee-block-2,
@@ -785,14 +783,14 @@ tr:nth-child(even) {
 		}
 
 		.bee-row-2 .bee-col-5 .bee-block-1 {
-			width: 100%;
+			width: 80%;
 			text-align: center;
-			padding: 10px
+			
 		}
 
 		.bee-row-2 .bee-col-5 .bee-block-2 {
 			text-align: left;
-			padding: 10px
+			
 		}
 
 		.bee-row-3 .bee-col-1 .bee-block-1 {
@@ -901,12 +899,13 @@ tr:nth-child(even) {
     </div>
 <div class="bee-block bee-block-2 bee-list">
 <ul>
-<li><a href="https://ieeebangalore.org/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/" rel="noopener" target="_blank">Home</a></li>
-<li><a href="https://ieeebangalore.org/about/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/about/" rel="noopener" target="_blank">About</a></li>
-<li><a href="https://ieeebangalore.org/execom-2022/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/execom-2022/" rel="noopener" target="_blank">Execom 2022</a></li>
-<li><a href="https://ieeebangalore.org/newsletters/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/newsletters/" rel="noopener" target="_blank">Newsletters</a></li>
-<li><a href="https://ieeebangalore.org/by-laws/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/by-laws/" rel="noopener" target="_blank">By-Laws</a></li>
-<li><a href="https://ieeebangalore.org/guide-to-join-ieee/" rel="noopener" target="_blank"></a><a href="https://ieeebangalore.org/guide-to-join-ieee/" rel="noopener" target="_blank">Guide to Join IEEE</a></li>
+    <li><a href="index.html" rel="noopener" target="_blank"></a><a href="index.html" rel="noopener" target="_blank">Home</a></li>
+    <li><a href="pricing.html" rel="noopener" target="_blank"></a><a href="pricing.html" rel="noopener" target="_blank">Tracks</a></li>
+    <li><a href="oc.html" rel="noopener" target="_blank"></a><a href="oc.html" rel="noopener" target="_blank">About</a></li>
+    <li><a href="products.html" rel="noopener" target="_blank"></a><a href="products.html" rel="noopener" target="_blank">Schedule</a></li>
+    <li><a href="faq.html" rel="noopener" target="_blank"></a><a href="faq.html" rel="noopener" target="_blank">Registration</a></li>
+    <li><a href="contact.html" rel="noopener" target="_blank"></a><a href="contact.html" rel="noopener" target="_blank">contact-us</a></li>
+    
 </ul>
 </div>
 </div>
@@ -918,7 +917,8 @@ tr:nth-child(even) {
 </div>
 </div>
 </div>
-            <!--========== END FOOTER ==========-->
+        <!--========== END FOOTER ==========-->
+
 
         <!-- Back To Top -->
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
