--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                 </ol>
             </div>
 
@@ -110,6 +112,30 @@
                             </div>
                         </div>
                     </div>
+                    <div class="item">
+                            <img class="img-responsive" src="img/1920x1080/3.jpg" alt="Slider Image">
+                            <div class="container">
+                                <div class="carousel-centered">
+                                        <div class="margin-b-40">
+                                                <h1 class="carousel-title">BHTC-2022</h1>
+                                                <h3 style="color: yellow">October 1st and 2nd</p>
+                                            </div>
+                                    <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                                <img class="img-responsive" src="img/1920x1080/5.jpg" alt="Slider Image">
+                                <div class="container">
+                                    <div class="carousel-centered">
+                                            <div class="margin-b-40">
+                                                    <h1 class="carousel-title">BHTC-2022</h1>
+                                                    <h3 style="color: yellow">October 1st and 2nd</p>
+                                                </div>
+                                        <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a>
+                                    </div>
+                                </div>
+                            </div>
                 
             </div>
             
