--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,8 @@
 <style>
 		.bee-row,
 		.bee-row-content {
-			position: relative
+            position: relative;
+            color: #2669c4;
 		}
 
 		.bee-row-1 .bee-row-content,
