--- a/oc.html
+++ b/oc.html
@@ -640,7 +640,8 @@ tr:nth-child(even) {
 <style>
 		.bee-row,
 		.bee-row-content {
-			position: relative
+            position: relative;
+            color: #2669c4;
 		}
 
 		.bee-row-1 .bee-row-content,
