--- a/faq.html
+++ b/faq.html
@@ -270,7 +270,8 @@
 <style>
 		.bee-row,
 		.bee-row-content {
-			position: relative
+            position: relative;
+            color: #2669c4;
 		}
 
 		.bee-row-1 .bee-row-content,
