--- a/oc.html
+++ b/oc.html
@@ -12,11 +12,9 @@
 <title>IEEE BHTC</title>
 <!-- GLOBAL MANDATORY STYLES -->
 <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
-<link href="vendor/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css"/>
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
 <link href="asset/css/font-awesome.min.css" rel="stylesheet">
-<link href="asset/css/ionicons.min.css" rel="stylesheet">
 
 
 <!-- PAGE LEVEL PLUGIN STYLES -->
@@ -27,7 +25,7 @@
 <link rel="stylesheet" href="asset/css/animate.min.css">
 
 <link href="asset/css/main.css" rel="stylesheet">
-
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <style>
 table {
@@ -44,9 +42,16 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+
+
 </style>
+<style>
+.icon {
+  font-size: 50px;
+}
 
-
+</style>
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <header class="header navbar-fixed-top" ">
@@ -133,15 +138,12 @@ tr:nth-child(even) {
       </div>
 
         <div class="row">
-			
-			
-
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="https://ieee-conecct.org/assets/img/OC/Deepa.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="https://www.linkedin.com/in/pdeepashenoy"><i class="ion-social-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/pdeepashenoy"><i class="fa accordion_card" style="font-size:24px;" style="color: #ffffff"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -647,6 +649,7 @@ tr:nth-child(even) {
          max-height: 25px;
      }
   </style>
+  
       <!-- Links -->
       
           <div class="content-sm container">
