--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 
     <!-- ======= Related Topics Section ======= -->
-    <section id="related" class="related section-bg">
+    <!-- <section id="related" class="related section-bg">
       <div class="container">
 
         <div class="row">
@@ -180,7 +180,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Related Topics Section -->
 
     <!-- ======= Overview Section ====== -->
