--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c1">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
@@ -344,7 +344,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c3">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C3</h4>
                 <p>c3</p>
@@ -357,7 +357,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c2">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C2</h4>
                 <p>c2</p>
@@ -370,7 +370,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c1">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
@@ -383,7 +383,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c3">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C3</h4>
                 <p>c3</p>
@@ -396,7 +396,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c1">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
@@ -409,7 +409,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c2">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C2</h4>
                 <p>c2</p>
@@ -422,7 +422,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c3">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C3</h4>
                 <p>c3</p>
@@ -435,7 +435,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item filter-c1">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
@@ -464,7 +464,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
@@ -477,7 +477,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C3</h4>
                 <p>c3</p>
@@ -490,7 +490,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C2</h4>
                 <p>c2</p>
@@ -503,7 +503,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
@@ -516,7 +516,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C3</h4>
                 <p>c3</p>
@@ -529,7 +529,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
@@ -542,7 +542,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C2</h4>
                 <p>c2</p>
@@ -555,7 +555,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/2.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C3</h4>
                 <p>c3</p>
@@ -568,7 +568,7 @@
 
           <div class="col-lg-4 col-md-6 publication-item">
             <div class="publication-wrap">
-              <img src="assets/img/publications/1.png" class="img-fluid" alt="">
+              <img src="assets/img/oc/1.jpg" class="img-fluid" alt="">
               <div class="publication-info">
                 <h4>C1</h4>
                 <p>c1</p>
