--- a/index.html
+++ b/index.html
@@ -102,26 +102,17 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-    <!-- <div class="container text-center position-relative" data-aos="fade-in" data-aos-delay="200">
-      <h1>Ensure sustainable consumption and production patterns</h1>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
-    </div> -->
     <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <img src="assets/img/1.png" class="d-block w-100" alt="...">
+        <div class="carousel-item slide-1 active" data-bs-interval="7000">
         </div>
-        <div class="carousel-item" data-bs-interval="10000">
-          <img src="assets/img/2.png" class="d-block w-100" alt="...">
+        <div class="carousel-item slide-2" data-bs-interval="7000">
         </div>
-        <div class="carousel-item" data-bs-interval="10000">
-          <img src="assets/img/3.png" class="d-block w-100" alt="...">
+        <div class="carousel-item slide-3" data-bs-interval="7000">
         </div>
-        <div class="carousel-item" data-bs-interval="10000">
-          <img src="assets/img/4.png" class="d-block w-100" alt="...">
+        <div class="carousel-item slide-4" data-bs-interval="7000">
         </div>
-        <div class="carousel-item" data-bs-interval="10000">
-          <img src="assets/img/5.png" class="d-block w-100" alt="...">
+        <div class="carousel-item slide-5" data-bs-interval="7000">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
